remove warnings from primitive wrapper